--- a/src/components/FieldsSection/style.scss
+++ b/src/components/FieldsSection/style.scss
@@ -41,7 +41,8 @@
     border: 2px dotted rgb(7, 25, 187);
     height: 50px;
     background-color: #F4F6FA;
-    margin-left: 10px;
-    margin-right: 10px;
+    list-style-type: none;
+    margin: 20px 10px;
+    transition: none
   }
 }
